--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ mat3 rotationY(float angle) {
     s, 0.0, c
   );
 }
+
 mat3 rotationZ(float angle) {
   float s = sin(angle), c = cos(angle);
   return mat3(
@@ -54,33 +55,26 @@ float fBox(vec3 p, vec3 b) {
   return length(max(d, 0.0)) + min(max(d.x, max(d.y, d.z)), 0.0);
 }
 
-float combine(float a, float b) {
-  return max(a, b); // union
-}
-
 float scene(vec3 p) {
-  float r = 1.0;
-  float3 pos = p;
-  float size = 0.5;
-  int steps = 5;
+  float s = 0.3;
+  vec3 pos = p;
+  float value = 1.0;
 
-  for (int i = 0; i < steps; i++) {
-    vec2 absXY = abs(pos.xy) - size;
+  for (int i = 0; i < 6; i++) {
+    vec2 absXY = abs(pos.xy) - value;
     pos = vec3(absXY, pos.z);
-    pos = rotationY(time * 0.3) * pos;
-    pos = rotationZ(time * 0.2) * pos;
-    size *= 0.9;
+    pos = rotationY(time * 0.2) * pos;
+    pos = rotationZ(time * 0.15) * pos;
+    value *= 0.9;
   }
 
-  float box1 = fBox(pos, vec3(0.2));
+  float box1 = fBox(pos, vec3(0.3));
   float box2 = fBox(pos, vec3(0.1));
   float d = -box1;
   d = min(d, box2);
 
-  float sphere = length(pos) - 0.5;
-  float final = combine(d, sphere);
-
-  return final;
+  float sphere = length(pos) - 0.4;
+  return max(d, sphere);
 }
 
 vec3 getNormal(vec3 p) {
@@ -97,7 +91,7 @@ void main() {
   vec2 uv = (gl_FragCoord.xy / resolution) * 2.0 - 1.0;
   uv.x *= resolution.x / resolution.y;
 
-  vec3 ro = vec3(sin(time * 0.2) * 2.5, sin(time * 0.1) * 1.5, cos(time * 0.2) * 2.5);
+  vec3 ro = vec3(sin(time * 0.3) * 3.0, sin(time * 0.15) * 2.0, cos(time * 0.3) * 3.0);
   vec3 ta = vec3(0.0);
   vec3 f = normalize(ta - ro);
   vec3 r = normalize(cross(vec3(0.0,1.0,0.0), f));
@@ -114,7 +108,7 @@ void main() {
       hit = true;
       break;
     }
-    if (t > 10.0) break;
+    if (t > 20.0) break;
     t += d;
   }
 
@@ -122,11 +116,11 @@ void main() {
   if (hit) {
     vec3 p = ro + rd * t;
     vec3 n = getNormal(p);
-    vec3 lightDir = normalize(vec3(0.5, 1.0, 0.8));
+    vec3 lightDir = normalize(vec3(0.7, 1.0, 0.8));
     float diff = clamp(dot(n, lightDir), 0.0, 1.0);
-    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 32.0);
-    col = vec3(1.0) * diff + vec3(1.0) * spec * 0.5;
-    col = pow(col, vec3(0.4545)); // gamma
+    float spec = pow(clamp(dot(reflect(-lightDir, n), -rd), 0.0, 1.0), 16.0);
+    col = vec3(0.8, 0.9, 1.0) * diff + vec3(1.0) * spec * 0.4;
+    col = pow(col, vec3(0.4545));
   }
 
   gl_FragColor = vec4(col, 1.0);
@@ -150,8 +144,8 @@ function compileShader(type, source) {
   return shader;
 }
 
-const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').text;
-const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').text;
+const vsSource = document.querySelector('script[type="x-shader/x-vertex"]').textContent;
+const fsSource = document.querySelector('script[type="x-shader/x-fragment"]').textContent;
 
 const vertexShader = compileShader(gl.VERTEX_SHADER, vsSource);
 const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fsSource);
@@ -160,6 +154,9 @@ const program = gl.createProgram();
 gl.attachShader(program, vertexShader);
 gl.attachShader(program, fragmentShader);
 gl.linkProgram(program);
+if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
 gl.useProgram(program);
 
 const posLoc = gl.getAttribLocation(program, 'position');
