--- a/index.html
+++ b/index.html
@@ -1,143 +1,299 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <title>Custom Shader mit OrbitControls</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    body {
-      margin: 0;
-      overflow: hidden;
-      background: #000;
-    }
-    canvas {
-      display: block;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>Mandelbulb Lights HQ</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+  html, body {
+    margin: 0; padding: 0;
+    background: black;
+    overflow: hidden;
+    height: 100%; width: 100%;
+    touch-action: none;
+    user-select: none;
+  }
+  canvas {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+  }
+</style>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.161.0/examples/js/controls/OrbitControls.min.js"></script>
+<canvas id="glcanvas"></canvas>
 <script>
-  let scene = new THREE.Scene();
-  let camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 100);
-  camera.position.z = 3;
+const canvas = document.getElementById("glcanvas");
+const gl = canvas.getContext("webgl");
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+gl.viewport(0, 0, canvas.width, canvas.height);
 
-  let renderer = new THREE.WebGLRenderer({antialias: true});
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
+const vertexShaderSource = `
+attribute vec3 position;
+void main() {
+  gl_Position = vec4(position, 1.0);
+}`;
 
-  // Controls
-  let controls = new THREE.OrbitControls(camera, renderer.domElement);
-  controls.enableDamping = true;
+const fragmentShaderSource = `
+precision highp float;
+uniform vec2 resolution;
+uniform vec3 camPos;
+uniform vec3 camTarget;
+uniform float time;
 
-  // Licht
-  scene.add(new THREE.AmbientLight(0x404040));
-  let directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-  directionalLight.position.set(3, 5, 2);
-  scene.add(directionalLight);
+float hash(vec3 p) {
+  p = fract(p * 0.3183099 + vec3(0.1,0.2,0.3));
+  p *= 17.0;
+  return fract(p.x * p.y * p.z * (p.x + p.y + p.z));
+}
 
-  // Shader
-  const uniforms = {
-    u_time: { value: 0.0 },
-    u_resolution: { value: new THREE.Vector2(window.innerWidth, window.innerHeight) }
-  };
+float noise(vec3 p){
+  vec3 i = floor(p);
+  vec3 f = fract(p);
+  f = f*f*(3.0-2.0*f);
+  float n = mix(mix(mix(hash(i), hash(i+vec3(1,0,0)),f.x),
+                    mix(hash(i+vec3(0,1,0)), hash(i+vec3(1,1,0)),f.x),f.y),
+                mix(mix(hash(i+vec3(0,0,1)), hash(i+vec3(1,0,1)),f.x),
+                    mix(hash(i+vec3(0,1,1)), hash(i+vec3(1,1,1)),f.x),f.y),f.z);
+  return n;
+}
 
-  const fragmentShader = `
-    uniform float u_time;
-    uniform vec2 u_resolution;
+float fbm(vec3 p) {
+  float f = 0.0;
+  float amp = 0.5;
+  float freq = 0.25;
+  for(int i = 0; i < 5; i++) {
+    f += amp * noise(p * freq);
+    freq *= 2.0;
+    amp *= 0.5;
+  }
+  return f;
+}
 
-    float box(vec3 p, vec3 b) {
-      vec3 q = abs(p) - b;
-      return length(max(q,0.0)) + min(max(q.x,max(q.y,q.z)),0.0);
+float mandelbulbDE(vec3 pos, float power, vec3 offset) {
+  vec3 z = pos;
+  float dr = 1.0;
+  float r = 0.0;
+  for(int i = 0; i < 8; i++) {
+    r = length(z);
+    if (r > 2.0) break;
+    float theta = acos(z.z / r);
+    float phi = atan(z.y, z.x);
+    dr = pow(r, power - 1.0) * power * dr + 1.0;
+    float zr = pow(r, power);
+    theta *= power;
+    phi *= power;
+    z = zr * vec3(sin(theta)*cos(phi), sin(theta)*sin(phi), cos(theta)) + pos + offset;
+  }
+  return 0.5 * log(r) * r / dr;
+}
+
+vec3 getNormal(vec3 p, float power, vec3 offset) {
+  float eps = 0.001;
+  float d = mandelbulbDE(p, power, offset);
+  return normalize(vec3(
+    mandelbulbDE(p + vec3(eps,0,0), power, offset) - d,
+    mandelbulbDE(p + vec3(0,eps,0), power, offset) - d,
+    mandelbulbDE(p + vec3(0,0,eps), power, offset) - d
+  ));
+}
+
+float raymarch(vec3 ro, vec3 rd, float power, vec3 offset) {
+  float t = 0.0;
+  for(int i = 0; i < 150; i++) {
+    vec3 p = ro + rd * t;
+    float d = mandelbulbDE(p, power, offset);
+    if(d < 0.001) return t;
+    if(t > 20.0) break;
+    t += d;
+  }
+  return -1.0;
+}
+
+void main() {
+  vec2 uv = (gl_FragCoord.xy / resolution.xy) * 2.0 - 1.0;
+  uv.x *= resolution.x / resolution.y;
+
+  vec3 forward = normalize(camTarget - camPos);
+  vec3 right = normalize(cross(vec3(0,1,0), forward));
+  vec3 up = cross(forward, right);
+  vec3 rd = normalize(uv.x * right + uv.y * up + forward);
+  vec3 ro = camPos;
+
+  float slowTime = time * 0.5;
+  float power = 7.0;
+  vec3 offset = 0.2 * vec3(
+    sin(slowTime * 0.15),
+    sin(slowTime * 0.19 + 1.0),
+    sin(slowTime * 0.17 + 2.5)
+  ) + 0.03 * fbm(ro * 0.5 + slowTime * 0.05);
+
+  float dist = raymarch(ro, rd, power, offset);
+  vec3 col = vec3(0.0);
+
+  if(dist > 0.0){
+    vec3 pos = ro + rd * dist;
+    vec3 normal = getNormal(pos, power, offset);
+
+    float diff = 0.0;
+    float spec = 0.0;
+
+    for(int i = 0; i < 15; i++) {
+      float fi = float(i);
+      float speed = 0.9 + 0.7 * fract(sin(fi*12.9898)*43758.5453);
+      vec3 lightPos = vec3(
+        sin(slowTime * speed * (1.0 + fi * 0.1)) * 3.0,
+        cos(slowTime * speed * (1.1 + fi * 0.07)) * 3.0,
+        sin(slowTime * speed * (1.2 + fi * 0.03)) * 3.0
+      );
+      vec3 lightDir = normalize(lightPos - pos);
+      float distLight = length(lightPos - pos);
+      float attenuation = clamp(1.0 - distLight * 0.3, 0.0, 1.0);
+      attenuation *= 0.4 + 0.6 * noise(lightPos + time*0.5);
+      float d = max(dot(normal, lightDir), 0.0) * attenuation;
+      float s = pow(max(dot(reflect(-lightDir, normal), -rd), 0.0), 64.0) * attenuation;
+      diff += d * 0.6;
+      spec += s * 0.3;
     }
 
-    float scene(vec3 p) {
-      vec3 offset = vec3(sin(u_time*0.3)*0.5, cos(u_time*0.2)*0.5, 0.0);
-      vec3 s1 = p;
-      float r = 0.25;
-
-      for(int i = 0; i < 4; i++) {
-        s1.xy = abs(s1.xy) - r;
-        s1 = s1.zyx;
-        r *= 0.75;
-      }
-
-      float d1 = box(s1 + offset, vec3(0.3));
-      float d2 = box(p - offset, vec3(0.25));
-      return min(d1, d2);
-    }
-
-    vec3 getNormal(vec3 p) {
-      float eps = 0.001;
-      return normalize(vec3(
-        scene(p + vec3(eps, 0.0, 0.0)) - scene(p - vec3(eps, 0.0, 0.0)),
-        scene(p + vec3(0.0, eps, 0.0)) - scene(p - vec3(0.0, eps, 0.0)),
-        scene(p + vec3(0.0, 0.0, eps)) - scene(p - vec3(0.0, 0.0, eps))
-      ));
-    }
-
-    void main() {
-      vec2 uv = (gl_FragCoord.xy - 0.5 * u_resolution.xy) / u_resolution.y;
-      vec3 ro = vec3(0.0, 0.0, 3.0);
-      vec3 rd = normalize(vec3(uv, -1.5));
-
-      float t = 0.0;
-      float d;
-      for(int i = 0; i < 64; i++) {
-        vec3 p = ro + t * rd;
-        d = scene(p);
-        if(d < 0.001) break;
-        t += d;
-        if(t > 10.0) break;
-      }
-
-      vec3 col = vec3(0.0);
-      if(d < 0.01) {
-        vec3 p = ro + t * rd;
-        vec3 n = getNormal(p);
-        vec3 lightDir = normalize(vec3(1.0, 1.0, 1.0));
-        float diff = max(dot(n, lightDir), 0.0);
-        col = vec3(diff);
-      }
-
-      col = pow(col, vec3(0.4545)); // gamma
-      gl_FragColor = vec4(col, 1.0);
-    }
-  `;
-
-  const vertexShader = `
-    void main() {
-      gl_Position = vec4(position, 1.0);
-    }
-  `;
-
-  const material = new THREE.ShaderMaterial({
-    uniforms: uniforms,
-    vertexShader: vertexShader,
-    fragmentShader: fragmentShader
-  });
-
-  const geometry = new THREE.PlaneGeometry(2, 2);
-  const quad = new THREE.Mesh(geometry, material);
-  scene.add(quad);
-
-  // Animation
-  function animate(time) {
-    uniforms.u_time.value = time * 0.001;
-    controls.update();
-    renderer.render(scene, camera);
-    requestAnimationFrame(animate);
+    col = vec3(1.0)*diff + vec3(1.0)*spec;
+    col = col / (col + vec3(1.0));
+    col = pow(col, vec3(1.2));
   }
 
-  window.addEventListener("resize", () => {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    uniforms.u_resolution.value.set(window.innerWidth, window.innerHeight);
-  });
+  gl_FragColor = vec4(col, 1.0);
+}
+`;
 
-  animate();
+// Shader kompilieren
+function compileShader(type, source) {
+  const shader = gl.createShader(type);
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    console.error(gl.getShaderInfoLog(shader));
+    return null;
+  }
+  return shader;
+}
+
+const vertexShader = compileShader(gl.VERTEX_SHADER, vertexShaderSource);
+const fragmentShader = compileShader(gl.FRAGMENT_SHADER, fragmentShaderSource);
+
+const program = gl.createProgram();
+gl.attachShader(program, vertexShader);
+gl.attachShader(program, fragmentShader);
+gl.linkProgram(program);
+
+if(!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+  console.error(gl.getProgramInfoLog(program));
+}
+
+gl.useProgram(program);
+
+const posLoc = gl.getAttribLocation(program, "position");
+const resLoc = gl.getUniformLocation(program, "resolution");
+const camPosLoc = gl.getUniformLocation(program, "camPos");
+const camTargetLoc = gl.getUniformLocation(program, "camTarget");
+const timeLoc = gl.getUniformLocation(program, "time");
+
+// Vollbild-Quad erstellen
+const buffer = gl.createBuffer();
+gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
+  -1,-1,0, 1,-1,0, -1,1,0,
+  -1,1,0, 1,-1,0, 1,1,0
+]), gl.STATIC_DRAW);
+
+gl.enableVertexAttribArray(posLoc);
+gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
+
+// Orbit-Control Variablen
+let azimuth = 0;
+let elevation = 0.4;
+let radius = 1.75;
+
+let targetAzimuth = azimuth;
+let targetElevation = elevation;
+let targetRadius = radius;
+
+let isDragging = false;
+let lastX = 0, lastY = 0;
+
+function clamp(x, min, max) {
+  return x < min ? min : (x > max ? max : x);
+}
+
+canvas.addEventListener("mousedown", e => {
+  isDragging = true;
+  lastX = e.clientX;
+  lastY = e.clientY;
+});
+window.addEventListener("mouseup", () => {
+  isDragging = false;
+});
+canvas.addEventListener("mousemove", e => {
+  if (!isDragging) return;
+  const dx = e.clientX - lastX;
+  const dy = e.clientY - lastY;
+  lastX = e.clientX;
+  lastY = e.clientY;
+  targetAzimuth += dx * 0.005;
+  targetElevation += dy * 0.005;
+  targetElevation = clamp(targetElevation, 0.1, Math.PI / 2 - 0.1);
+});
+
+// Zoom mit Mausrad
+canvas.addEventListener("wheel", e => {
+  e.preventDefault();
+  targetRadius += e.deltaY * 0.001;
+  targetRadius = clamp(targetRadius, 0.5, 4.0);
+});
+
+// Resize
+window.addEventListener("resize", () => {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+  gl.viewport(0, 0, canvas.width, canvas.height);
+});
+
+// Animation & Render-Loop
+let startTime = performance.now();
+
+function lerp(a, b, t) {
+  return a + (b - a) * t;
+}
+
+function animate() {
+  let now = performance.now();
+  let elapsed = (now - startTime) / 1000;
+
+  // Smooth Orbit Interpolation
+  azimuth = lerp(azimuth, targetAzimuth, 0.1);
+  elevation = lerp(elevation, targetElevation, 0.1);
+  radius = lerp(radius, targetRadius, 0.1);
+
+  // Kamera-Position berechnen
+  let camX = radius * Math.cos(elevation) * Math.sin(azimuth);
+  let camY = radius * Math.sin(elevation);
+  let camZ = radius * Math.cos(elevation) * Math.cos(azimuth);
+  let camPos = [camX, camY, camZ];
+  let camTarget = [0, 0, 0];
+
+  // Uniforms setzen
+  gl.uniform2f(resLoc, canvas.width, canvas.height);
+  gl.uniform3fv(camPosLoc, camPos);
+  gl.uniform3fv(camTargetLoc, camTarget);
+  gl.uniform1f(timeLoc, elapsed);
+
+  // Zeichnen
+  gl.drawArrays(gl.TRIANGLES, 0, 6);
+
+  requestAnimationFrame(animate);
+}
+
+animate();
 </script>
 </body>
 </html>
