--- a/index.html
+++ b/index.html
@@ -213,7 +213,6 @@ gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 let azimuth = 0;
 let elevation = 0.4;
 let radius = 1.75;
-
 let targetAzimuth = azimuth;
 let targetElevation = elevation;
 let targetRadius = radius;
@@ -225,14 +224,13 @@ function clamp(x, min, max) {
   return x < min ? min : (x > max ? max : x);
 }
 
+// Maussteuerung
 canvas.addEventListener("mousedown", e => {
   isDragging = true;
   lastX = e.clientX;
   lastY = e.clientY;
 });
-window.addEventListener("mouseup", () => {
-  isDragging = false;
-});
+window.addEventListener("mouseup", () => isDragging = false);
 canvas.addEventListener("mousemove", e => {
   if (!isDragging) return;
   const dx = e.clientX - lastX;
@@ -243,13 +241,55 @@ canvas.addEventListener("mousemove", e => {
   targetElevation += dy * 0.005;
   targetElevation = clamp(targetElevation, 0.1, Math.PI / 2 - 0.1);
 });
-
-// Zoom mit Mausrad
 canvas.addEventListener("wheel", e => {
   e.preventDefault();
   targetRadius += e.deltaY * 0.001;
   targetRadius = clamp(targetRadius, 0.5, 4.0);
 });
+
+// Touchsteuerung
+let touchMode = "";
+let lastTouchDist = 0;
+
+canvas.addEventListener("touchstart", e => {
+  if (e.touches.length === 1) {
+    touchMode = "rotate";
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+  } else if (e.touches.length === 2) {
+    touchMode = "zoom";
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    lastTouchDist = Math.hypot(dx, dy);
+  }
+}, { passive: false });
+
+canvas.addEventListener("touchmove", e => {
+  e.preventDefault();
+  if (touchMode === "rotate" && e.touches.length === 1) {
+    const dx = e.touches[0].clientX - lastX;
+    const dy = e.touches[0].clientY - lastY;
+    lastX = e.touches[0].clientX;
+    lastY = e.touches[0].clientY;
+    targetAzimuth += dx * 0.005;
+    targetElevation += dy * 0.005;
+    targetElevation = clamp(targetElevation, 0.1, Math.PI / 2 - 0.1);
+  } else if (touchMode === "zoom" && e.touches.length === 2) {
+    const dx = e.touches[0].clientX - e.touches[1].clientX;
+    const dy = e.touches[0].clientY - e.touches[1].clientY;
+    const dist = Math.hypot(dx, dy);
+    const delta = dist - lastTouchDist;
+    lastTouchDist = dist;
+    targetRadius -= delta * 0.005;
+    targetRadius = clamp(targetRadius, 0.5, 4.0);
+  }
+}, { passive: false });
+
+canvas.addEventListener("touchend", e => {
+  if (e.touches.length === 0) {
+    touchMode = "";
+  }
+}, { passive: false });
 
 // Resize
 window.addEventListener("resize", () => {
@@ -258,9 +298,8 @@ window.addEventListener("resize", () => {
   gl.viewport(0, 0, canvas.width, canvas.height);
 });
 
-// Animation & Render-Loop
+// Animation & Render
 let startTime = performance.now();
-
 function lerp(a, b, t) {
   return a + (b - a) * t;
 }
@@ -269,27 +308,22 @@ function animate() {
   let now = performance.now();
   let elapsed = (now - startTime) / 1000;
 
-  // Smooth Orbit Interpolation
   azimuth = lerp(azimuth, targetAzimuth, 0.1);
   elevation = lerp(elevation, targetElevation, 0.1);
   radius = lerp(radius, targetRadius, 0.1);
 
-  // Kamera-Position berechnen
   let camX = radius * Math.cos(elevation) * Math.sin(azimuth);
   let camY = radius * Math.sin(elevation);
   let camZ = radius * Math.cos(elevation) * Math.cos(azimuth);
   let camPos = [camX, camY, camZ];
   let camTarget = [0, 0, 0];
 
-  // Uniforms setzen
   gl.uniform2f(resLoc, canvas.width, canvas.height);
   gl.uniform3fv(camPosLoc, camPos);
   gl.uniform3fv(camTargetLoc, camTarget);
   gl.uniform1f(timeLoc, elapsed);
 
-  // Zeichnen
   gl.drawArrays(gl.TRIANGLES, 0, 6);
-
   requestAnimationFrame(animate);
 }
 
