--- a/index.html
+++ b/index.html
@@ -191,22 +191,18 @@ gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
 gl.enableVertexAttribArray(posLoc);
 gl.vertexAttribPointer(posLoc, 3, gl.FLOAT, false, 0, 0);
 
-// Orbit Controls state:
-let theta = Math.PI/4;  // aktueller Winkel horizontal
-let phi = Math.PI/4;    // aktuell Winkel vertikal
-let radius = 4.0;       // aktueller Radius
-let target = [0,0,0];   // aktueller Zielpunkt
+// --- Orbit Controls ---
 
-// Zielwerte für sanfte Animation (damped)
+let theta = Math.PI/4;
+let phi = Math.PI/4;
+let radius = 4.0;
+let target = [0,0,0];
+
 let targetTheta = theta;
 let targetPhi = phi;
 let targetRadius = radius;
 let targetPos = [...target];
 
-// Pan offsets
-// (hier wird target direkt animiert)
-
-// Für Maus/Touch
 let isDragging = false;
 let isPanning = false;
 let lastX = 0, lastY = 0;
@@ -214,20 +210,18 @@ let lastX = 0, lastY = 0;
 let touchDistStart = 0;
 let touchRadiusStart = radius;
 
-// Maus Events
 canvas.addEventListener('mousedown', (e) => {
   isDragging = true;
   lastX = e.clientX;
   lastY = e.clientY;
-  // Rechtsklick oder Shift = Pan
   isPanning = e.button === 2 || e.shiftKey;
   e.preventDefault();
 });
-canvas.addEventListener('mouseup', (e) => {
+canvas.addEventListener('mouseup', () => {
   isDragging = false;
   isPanning = false;
 });
-canvas.addEventListener('mouseleave', (e) => {
+canvas.addEventListener('mouseleave', () => {
   isDragging = false;
   isPanning = false;
 });
@@ -239,14 +233,12 @@ canvas.addEventListener('mousemove', (e) => {
   lastY = e.clientY;
 
   if (isPanning) {
-    // Pan: verschiebe target parallel zur Kameraebene
     const panSpeed = 0.005 * targetRadius;
     let up = [0,1,0];
     let camPos = getCamPos(targetTheta, targetPhi, targetRadius, targetPos);
     let forward = normalize(subtractVectors(targetPos, camPos));
     let right = normalize(cross(forward, up));
     let camUp = normalize(cross(right, forward));
-    // Pan Zielpunkt ändern
     targetPos = addVectors(targetPos,
       addVectors(
         scaleVector(right, -dx * panSpeed),
@@ -254,7 +246,6 @@ canvas.addEventListener('mousemove', (e) => {
       )
     );
   } else {
-    // Orbit: Zielwinkel ändern
     const orbitSpeed = 0.005;
     targetTheta -= dx * orbitSpeed;
     targetPhi -= dy * orbitSpeed;
@@ -263,7 +254,6 @@ canvas.addEventListener('mousemove', (e) => {
   }
 });
 
-// Zoom per Rad
 canvas.addEventListener('wheel', (e) => {
   e.preventDefault();
   const zoomSpeed = 0.0015;
@@ -271,7 +261,6 @@ canvas.addEventListener('wheel', (e) => {
   targetRadius = Math.max(0.5, Math.min(20, targetRadius));
 });
 
-// Touch Events (für mobile Geräte)
 canvas.addEventListener('touchstart', (e) => {
   if (e.touches.length === 1) {
     isDragging = true;
@@ -281,7 +270,6 @@ canvas.addEventListener('touchstart', (e) => {
   } else if (e.touches.length === 2) {
     isDragging = false;
     isPanning = false;
-    // Pinch Zoom starten
     let dx = e.touches[0].clientX - e.touches[1].clientX;
     let dy = e.touches[0].clientY - e.touches[1].clientY;
     touchDistStart = Math.sqrt(dx*dx + dy*dy);
@@ -295,15 +283,12 @@ canvas.addEventListener('touchmove', (e) => {
     let dy = e.touches[0].clientY - lastY;
     lastX = e.touches[0].clientX;
     lastY = e.touches[0].clientY;
-
-    // Standard Orbit ohne Pan (Shift/Rightclick gibt es hier nicht)
     const orbitSpeed = 0.005;
     targetTheta -= dx * orbitSpeed;
     targetPhi -= dy * orbitSpeed;
     const eps = 0.01;
     targetPhi = Math.max(eps, Math.min(Math.PI - eps, targetPhi));
   } else if (e.touches.length === 2) {
-    // Pinch Zoom
     let dx = e.touches[0].clientX - e.touches[1].clientX;
     let dy = e.touches[0].clientY - e.touches[1].clientY;
     let dist = Math.sqrt(dx*dx + dy*dy);
@@ -319,7 +304,7 @@ canvas.addEventListener('touchend', (e) => {
   }
 });
 
-// Hilfsfunktionen für Vektor:
+// Vektor-Hilfsfunktionen
 
 function subtractVectors(a,b) {
   return [a[0]-b[0], a[1]-b[1], a[2]-b[2]];
@@ -346,7 +331,8 @@ function cross(a,b) {
   ];
 }
 
-// Kamera Position aus Theta, Phi, Radius, Target berechnen
+// Kamera-Position aus Winkel, Radius, Zielpunkt
+
 function getCamPos(tTheta=theta, tPhi=phi, tRadius=radius, tTarget=target) {
   let sinPhi = Math.sin(tPhi);
   let x = tRadius * sinPhi * Math.sin(tTheta);
@@ -355,7 +341,8 @@ function getCamPos(tTheta=theta, tPhi=phi, tRadius=radius, tTarget=target) {
   return addVectors(tTarget, [x,y,z]);
 }
 
-// Dämpfungsfunktion (lerp)
+// Lineares Interpolieren
+
 function lerp(a,b,t) {
   return a + (b - a) * t;
 }
@@ -368,12 +355,12 @@ function lerpVec(a,b,t) {
   ];
 }
 
-// Animation Loop
+// Render Loop
+
 function render(t) {
   gl.viewport(0, 0, canvas.width, canvas.height);
   gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-  // Dämpfe Werte, 0.1 = Speed der Animation (höher = schneller)
   const damping = 0.1;
   theta += (targetTheta - theta) * damping;
   phi += (targetPhi - phi) * damping;
@@ -394,7 +381,7 @@ function render(t) {
 
 requestAnimationFrame(render);
 
-// Kontextmenü für Rechtsklick deaktivieren, damit Pan mit Rechtsklick funktioniert:
+// Kontextmenü bei Rechtsklick deaktivieren
 canvas.addEventListener('contextmenu', e => e.preventDefault());
 </script>
 </body>
